fixing issue on iphone parallax

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
     perspective: 1px;
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .page {
